tests/unit-fail-compilation/redecl.ref
redecl.c:3:7: error: Redeclaration of x with no linkage.
  Constraint violation (CV-TDL4). See C11 sec. 6.7:3
Translation failed (config dumped). Run kcc -d redecl.c to see commands run.
