tests/unit-fail-compilation/redecl.c
int main(void) {
      int x;
      int x;
}
